syntax = "proto3";

package io.elkia.eventing.v1alpha1;

option go_package = "pkg/api/eventing/v1alpha1";

message RequestHandoffMessage {
  string identifier = 1;
  string password = 2;
  string client_version = 3;
  string client_checksum = 4;
}

message Gateway {
  uint32 id = 1;
  string address = 2;
  uint32 population = 3;
  uint32 capacity = 4;
  uint32 world_id = 5;
  string world_name = 6;
}

message ProposeHandoffMessage {
  uint32 key = 1;
  repeated Gateway gateways = 2;
}

message SyncMessage { uint32 sequence = 1; }

message PerformHandoffMessage {
  uint32 sequence = 1;
  uint32 key = 2;
  string password = 3;
}
